--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
          <!-- ... -->
       <!-- this is a link object -->
       <div class="novinewpleaseleavemealonelinkTWO">
-         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/pinterest" target="_blank">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/images/logo/logo-pinterest.png">
-         Pinterest
+         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.wordpress.com" target="_blank">
+         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-wp.png">
+         ⭐My WordPress
          </a>
       </div>
       <!-- /this was a link object -->
@@ -443,79 +443,9 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
          display:inline-block;
        }
       </style>
-      <div class="line"></div>
-      <div style="display:inline-block; color:white;">Great Software</div>
-      <div class="line"></div>
-      <hr>
+      
 
 
-
-
-
-
-      <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.pclinuxos.com/" target="_blank">        <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
-         <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">PCLinuxOS <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;"></span></sub></sup></u></b></sub></sup>
-         </span>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->   
-	  </a>
-
-
-
-      <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.palemoon.org/" target="_blank">        <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
-         <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">Pale Moon <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;"></span></sub></sup></u></b></sub></sup>
-         </span>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->   
-	  </a>
-
-
-
-
-      <a class="novinewpleaseleavemealonelinkTWOhref" href="https://github.com/tsujan/FeatherPad?tab=readme-ov-file#featherpad" target="_blank">        <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
-         <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">FeatherPad <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;"></span></sub></sup></u></b></sub></sup>
-         </span>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->   
-	  </a>
-
-
-
-
- <a class="novinewpleaseleavemealonelinkTWOhref" href="https://xfce.org/" target="_blank">        <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
-         <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">Xfce <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;"></span></sub></sup></u></b></sub></sup>
-         </span>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->   
-	  </a>
-
-
-
-
-
-
-
-<hr><hr>
 	  <p class="newbottext"><span style=""><sup><span style="font-size:12px; letter-spacing:-0.0px; line-height:16px"><sup>▲&nbsp;</sup>Note: My online profiles and such are littered with harassment towards me, they're trying to mess up the place, ignore 'em<br>Don't feed the trolls. They aim to spread upset, and they fail to manage that, so just give them no attention & they get bored</span></sup></span><br></p>&nbsp;
 	   <p class="newbottext">
      <br><br>I'm an open-source advocate, and recommend and proritise the use of libre software, operating systems, and also open non-proprietary services, such as using the fediverse.
