--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -723,7 +723,7 @@ background-color:transparent
 
               <!-- /~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\ -->
             
-                  <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; no#00cc00; color:white;" href="https://validator.w3.org/" target="_blank"><sub><sup>W3C HTML validator</sup></sub></a>  
+                  <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; no#00cc00; color:white;" href="https://validator.w3.org/" target="_blank"><sub><sup>HTML validator</sup></sub></a>  
               <!-- \~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~/ -->
 
 
