--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ border: 0px solid transparent;
 	  <p></p>
       <div class="noviheart">
          <a href="https://novimatrem.uk/" target="_top" style="text-decoration:none;">
-            <h1>💚 Hi,&#8198;<span style="font-size:18px;">I'm zoey Globe (Novimatrem) <span style="font-style: normal; font-size:26px;">&#8198;🏳️‍⚧️</span></span></h1>
+            <h1>💚 Hi,&#8198;<span style="font-size:18px;">I'm zoey Globe (Novimatrem) <span style="font-style: normal; font-size:26px;">&#8198;</span></span></h1>
          </a>
       </div>
       <span title="Click to open in new tab"><a target="_blank" href="https://novimatrem.uk/pfpOct2023_final_FULL.png"><img class="headerpfpTWO" src="https://novimatrem.uk/pfpOct2023_final_CIRCLE.png" alt="A selfie style photo of zoey Globe."></a></span>
-      <h2 class="mainboldtext"><span class="newtextmiddle" style="font-size:1.9138888rem">&nbsp;&nbsp;a trans, pan, polyam, cat-kin (otherkin) girl,<br>&nbsp;&nbsp;and fat acceptance advocate.<br><hr><sup style="float:right; margin-top:-39px; font-size:18px; color:lightgray">(and proud of it!)</sup><span></span><br><span style="vertical-align:top; float:left; top:0px; margin-top:0px; padding-top:0px;">&nbsp;</span></span>
+      <h2 class="mainboldtext"><span class="newtextmiddle" style="font-size:1.9138888rem">&nbsp;&nbsp;a trans, pan, polyam, cat-kin (otherkin) girl,<br>&nbsp;&nbsp;and fat acceptance advocate.<br><hr><sup style="float:right; margin-top:-25px; font-size:18px; color:lightgray">(and proud of it!)</sup><span></span><br><span style="vertical-align:top; float:left; top:0px; margin-top:0px; padding-top:0px;">&nbsp;</span></span>
          </sup>
       </h2>
 	  <div style="background-color:transparent;">
