--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1385,6 +1385,9 @@ background-color:transparent
 
 <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white; vertical-align:middle" href="https://docs.google.com/" target="_blank">gDocs</a>&nbsp;<span style="color:white"></span>
 
+	<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white; vertical-align:middle" href="https://german.wlingua.com/" target="_blank">W🇩🇪</a><span style="color:white"></span>
+
+
 
 
 
