i just don't have the hardware

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ border: 0px solid transparent;
 
       <script>
    function changeURL(){
-        var newURL = "https://www.youtube.com/watch?v=uHgt8giw1LY";
+        var newURL = "";
         document.getElementsByClassName(".noviolinkhref").href = newURL;
     }
 </script>
@@ -298,19 +298,7 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
          Pronouns
          </a>
       </div>
-      <!-- /this was a link object -->
-      <!-- /... -->
-      <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO">
-         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/videos" target="_blank">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-youtube.png">
-         ⭐YouTube-Videos
-         </a>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->
-     
+  
      
          <!-- ... -->
       <!-- this is a link object -->
@@ -342,16 +330,7 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
 
 
 
-  <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO">
-         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.youtube.com/@NovimatremLIVE" target="_blank">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-youtube.png">
-         YT-Livestreams
-         </a>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->
+
 
 
 <!-- ... -->
