--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/repos" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/images/logo/logo-gitlab.png">
-         Git (Repos)
+         ⭐Git (Repos)
          </a>
       </div>
       <!-- /this was a link object -->
