--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <span style="display:none;"´>foxcheck1</span>
+<span style="display:none;"´>Descriptors keywords tags: gain, SSBBW, USSBBW, Immobile, Blob, XWG</span>
 <!DOCTYPE html>
 <html lang="en">
    <head>
