--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -1,6 +1,23 @@
+<!DOCTYPE HTML>
+<html lang="en-US">
+   <head>
+      <meta name="robots" content="noindex,nofollow">
+      <meta charset="UTF-8">
+      <meta http-equiv="refresh" content="0; url=https://novimatrem.uk/bookmarks/iframe.html">
+      <script type="text/javascript">
+         window.location.href = "https://novimatrem.uk/bookmarks/iframe.html"
+      </script>
+      <title>Page Redirection</title>
+   </head>
+   <body>
+      <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+      If you are not redirected automatically, follow this <a href='https://novimatrem.uk/bookmarks/iframe.html'>link to https://novimatrem.uk/bookmarks/iframe.html</a>.
+   </body>
+</html>
+
 <!DOCTYPE html>
 <html>
-  
+
 <head>
  <link rel="stylesheet" href="w3.css"> 
 	  <link rel="stylesheet" href="bootstrap.min.css"> 
