--- a/uac-uc/index.html
+++ b/uac-uc/index.html
@@ -4,12 +4,12 @@
       <script type="text/javascript">
          console.log("trying to redirect to new new")
          if (window.location.hostname == 'novimatrem.gitlab.io') {
-            window.location.replace("https://novimatrem.uk/uc-uac"); 
+            window.location.replace("https://novimatrem.uk/uac-uc"); 
          }
       </script>
-      <link rel="canonical" href="https://novimatrem.uk/uc-uac">
+      <link rel="canonical" href="https://novimatrem.uk/uac-uc">
       <!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
-      <title>Novimatrem - uc-uac (private)</title>
+      <title>Novimatrem - uac-uc (private)</title>
       <meta name="description" content="Novimatrem's site of things and words. 🐈🐱- Hobbyist Linux systems administrator, open-source software & web-developer, and free-software advocate.">
       <meta name="author" content="Novimatrem">
       <meta name="keywords" content="HTML,CSS">
@@ -59,7 +59,7 @@
       <div class="noviheart">
       </div>
       <h2 class="mainboldtext">
-         uc-uac
+         uac-uc
       </h2><p><a href="https://namechk.com/" target="_blank">https://namechk.com/</a>
 <br>
 <a href="https://instantusername.com/" target="_blank">https://instantusername.com/</a>
