--- a/uac-uc/index.html
+++ b/uac-uc/index.html
@@ -78,6 +78,12 @@
 <a href="https://www.spinxo.com/username-check" target="_blank">https://www.spinxo.com/username-check</a>
 <br>
 <br>
+github pages<br>
+gitlab pages<br>
+yt<br>
+wordpress<br>
+Pinterest<br>
+Steam<br>
 <br>
       <h3>
       <!-- ... -->
