--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <a href="#socialreboot"><img src="./assets/socialreboot_banner_25.png" style="width:auto; height:3%; border:3px solid #181a1b;"></a>
 
     </span></p></div><hr>
-	  <div class="aroundlinks" id="socialreboot"><p></p>
+	  <div class="aroundlinks" id="socialreboot" style="border: 0.01px solid black"><p></p>
       <sup><span class="newpara" style="vertical-align:top; float:left; line-height:21px; margin-left:20px; float:right;"><br><hr><span style="color:yellow;">new!</span> tons of new and improved socials & such for you to enjoy, from me 💚&nbsp;<br><br><br>
          <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup><hr>
    
@@ -443,7 +443,8 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <!-- /this was a link object -->
       <!-- /... -->   
 	  </a>
-<input type="text" value=" TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:255px; font-weight:600; color:black; vertical-align:middle; margin-top:8px; border-radius:32px; background-color:#ff7eb7; color:black; font-weight:500;">	  </div>
+<input type="text" value=" TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:255px; font-weight:600; color:black; vertical-align:middle; margin-top:8px; border-radius:32px; background-color:#ff7eb7; color:black; font-weight:500;">	<br>     <hr>  <sup><span class="newpara" style="vertical-align:top; float:left; line-height:21px; margin-left:20px; font-size:14px; font-weight:500;"><br><hr><span style="color:yellow;"></span> <br>Think you're not a fan of email? A nice email client could make email easier and nicer for you!&nbsp;&nbsp;<br>I recommend <a href="https://www.thunderbird.net/" style="color:#ff7eb7; text-decoration:none;" target="_blank">Mozilla Thunderbird</a> - hope it helps!&nbsp;&nbsp;<br><br><br><hr><br><br>
+         <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup><hr> <br><p></p></div>
       <hr>      <style>
       .line {
          width: 53px;
